--- a/addDiscount.html
+++ b/addDiscount.html
@@ -127,7 +127,7 @@
         <br/>
         <a href="editProfile.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
         <br/>
-        <a class="rightMenuColor" onclick="myFunction('shops')">
+        <a href="#" class="rightMenuColor" onclick="myFunction('shops')">
             <span class="glyphicon glyphicon-home" style="color:#7B8084"></span>&nbsp;&nbsp;فروشگاه های من
             &nbsp;<span class="glyphicon glyphicon-chevron-down" id="more" style="color:#7B8084;margin-top:2px"></span>
         </a>
@@ -162,7 +162,7 @@
         </div>
         <br/>
         <div class="rightMenuColor">
-            <a class="rightMenuColor" id="logout"><span class="glyphicon glyphicon-off"
+            <a href="#" class="rightMenuColor" id="logout"><span class="glyphicon glyphicon-off"
                                                                  style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
             </a>
         </div>
@@ -192,7 +192,7 @@
                     <div class="col-md-11">
                         <select class="form-control w3-margin" required name="shops"
                                 id="addDiscount-form-shopKinds-inp"
-                                style="height:40px; background-color:#F2F2F2">
+                                style="height:40px; background-color:#F2F2F2" >
                             <option class="placeholder" selected disabled hidden value="" >فروشگاه</option>
                             <option value="" disabled ></option>
                             <!--need a for to read shop types from db-->
@@ -297,12 +297,6 @@
                     </div>
                 </div>
 
-                <br/>
-                <div class="form-group">
-                    <div class="col-md-11">
-                        * : وارد کردن تنها یکی از این موارد کافی می باشد.
-                    </div>
-                </div>
             </form>
         </div>
     </div>
@@ -460,7 +454,25 @@
 
     $(document).ready(function () {
 
-        const addDiscount_form_var = document.getElementById("addDiscount_form");
+        const addDiscount_form_var = document.getElementById("addDiscount-form");
+
+        /*
+         Reading from session "shops" and filled the shopKind selector sub myShops
+         */
+        if (typeof (window.sessionStorage.shops) !== "undefined") {
+
+            var shop_var = JSON.parse(window.sessionStorage.shops);
+            for (let val of shop_var) {
+                const op = document.createElement("option");
+                const opText = document.createTextNode(val.name);
+                const myShops = document.getElementById("addDiscount-form-shopKinds-inp");
+                const lastOp = document.getElementById("addDiscount-form-shopKinds-lastOp-op");
+                op.value = val.id;
+                op.appendChild(opText);
+                myShops.insertBefore(op,lastOp);
+            }
+        }
+
 
 
         $("#addDiscount-form").submit(function (e) {
@@ -472,7 +484,7 @@
             const productBrand_var = addDiscount_form_var.productBrand.value;
             const percent_var = addDiscount_form_var.percent.value;
             const count_var = addDiscount_form_var.countNumber.value;
-            const expireDate_var = addDiscount_form_var.expireDate.value.getY;
+            const expireDate_var = addDiscount_form_var.expireDate.value;
             const timeout_var = addDiscount_form_var.timeout.value;
             const description_var = addDiscount_form_var.description.value;
 
@@ -523,6 +535,43 @@
 
 
         });
+
+        /*
+      Request for logout
+      send authorization in header
+      */
+        $("#logout").click(function () {
+            var logout_var = confirm(" آیا اطمینان از خروج دارید؟ ");
+            if (logout_var ==true){
+                $.get("address.txt", function (data) {
+                    const my_address = data + "/salesman/logout/";
+                    $.ajax({
+                        type: 'POST',
+                        dataType: 'json',
+                        contentType: 'application/json',
+                        url: my_address,
+                        headers:{
+                            'Authorization' : window.sessionStorage.token
+                        },
+                        data: JSON.stringify({}),
+                        success: function (resultData, status, xhr) {
+                            alert(resultData.message);
+                            if (resultData.result.toString() === "true") {
+                                window.location.href="HomePage.html";
+                            }
+                        },
+                        error: function () {
+                            alert(" اتصال به اینترنت برقرار نیست. ");
+                        }
+                    })
+
+                });
+
+            }else{
+                alert(" از این که همراه ما خواهید بود متشکریم. ");
+            }
+        });
+
 
     });
 
