--- a/showDiscount.html
+++ b/showDiscount.html
@@ -173,11 +173,15 @@
 
                     </div>
 
-                    <div class="form-group">
-                        <div class="col-md-offset-1 col-md-11">
-                            <input type="submit" value="اضافه کردن تخفیف" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
-                        </div>
-                    </div>
+                    <button class="btn btn-default btnColors" onclick="goToEdit()">
+                        اضافه کردن تخفیف
+                    </button>
+
+<!--                    <div class="form-group">-->
+<!--                        <div class="col-md-offset-1 col-md-11">-->
+<!--                            <input type="submit" value="اضافه کردن تخفیف" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />-->
+<!--                        </div>-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
@@ -211,6 +215,11 @@
                 x.className = x.className.replace(" w3-show", "");
                 y.style.transform = "rotate(0deg)";
             }
+        }
+
+        //Going to editShop by clicking on showShop button
+        function goToEdit() {
+            window.location.href = "addDiscount.html";
         }
 
 
@@ -254,12 +263,6 @@
 
                 }
             }
-
-            //Go to AdminMainPage by clicking on picture
-            $("#admin-img").click(function () {
-                window.location.href = "AdminMainPage.html"
-            });
-
 
             //Getting id of selected subset shop
             const my_shop = document.getElementById("shops");
