--- a/showPoll.html
+++ b/showPoll.html
@@ -192,84 +192,93 @@
                 <div class="form-horizontal">
                     <h6 class=" w3-center" style="padding-bottom:15px ; padding-top:15px ;color:#181B20;padding-right:6px;"><b>  نظرسنجی ها  </b></h6>
                     <div class="col-container">
-                        <div style="direction:rtl !important ;" class="col w3-card-12">
-                            <div class="w3-border-black">
-                                <div class="w3-center"> @questoin </div>
-                                <br />
-                                <div>
-                                    این نظر سنجی از نوع @polltype
+                        <div class="col-container">
+                            <div style="direction:rtl !important ;" class="col w3-card-12">
+                                <div class="w3-border-black">
+                                    <div class="w3-center"> @questoin </div>
                                     <br />
-                                </div>
-                                <div class="col-container">
-                                    <div class="col">
-                                        <div id="multiChoice">
-                                            <!-- b tedade gozine ha -->
-                                            <div> @choiceBdy</div>
-                                            <br />
-                                            <div> @choiceBdy</div>
-                                            <br />
-                                        </div>
+                                    <div>
+                                        این نظر سنجی از نوع @polltype
+                                        <br />
                                     </div>
-                                    <div class="col">
-                                        <div class="form-group">
-                                            <div class="col-md-offset-7 col-md-11">
-                                                <input type="submit" value="نمایش نمودار دایره ای" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
+                                    <div class="col-container">
+                                        <div class="col">
+                                            <div id="multiChoice">
+                                                <!-- b tedade gozine ha -->
+                                                <div> @choiceBdy</div>
+                                                <br />
+                                                <div> @choiceBdy</div>
+                                                <br />
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <div class="col-md-offset-7 col-md-11">
-                                                <input type="submit" value=" نمایش نمودار میله ای" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
+                                        <div class="col">
+                                            <div class="form-group">
+                                                <div class="col-md-offset-7 col-md-11">
+                                                    <input type="submit" value="نمایش نمودار دایره ای" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="col-md-offset-7 col-md-11">
+                                                    <input type="submit" value=" نمایش نمودار میله ای" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
 
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <br />
-                    <div class="col-container">
-                        <div style="direction:rtl !important ;" class="col w3-card-12">
-                            <div class="w3-border-black">
-                                <div class="w3-center"> @questoin </div>
-                                <br />
-                                <div>
-                                    این نظر سنجی از نوع @polltype
-                                    <br />
-                                </div>
-                                <div class="col-container">
-                                    <div class="col">
-                                        <div id="multiChoice">
-                                            <!-- b tedade gozine ha -->
-                                            <div> @choiceBdy</div>
-                                            <br />
-                                            <div> @choiceBdy</div>
-                                            <br />
-                                        </div>
-                                    </div>
-                                    <div class="col">
-                                        <div class="form-group">
-                                            <div class="col-md-offset-7 col-md-11">
-                                                <input type="submit" value="نمایش نمودار دایره ای" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="col-md-offset-7 col-md-11">
-                                                <input type="submit" value=" نمایش نمودار میله ای" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                        <br />
 
+                        <div class="col-container">
+                            <div style="direction:rtl !important ;" class="col w3-card-12">
+                                <div class="w3-border-black">
+                                    <div class="w3-center"> @questoin </div>
+                                    <br />
+                                    <div>
+                                        این نظر سنجی از نوع @polltype
+                                        <br />
+                                    </div>
+                                    <div class="col-container">
+                                        <div class="col">
+                                            <div id="multiChoice">
+                                                <!-- b tedade gozine ha -->
+                                                <div> @choiceBdy</div>
+                                                <br />
+                                                <div> @choiceBdy</div>
+                                                <br />
+                                            </div>
+                                        </div>
+                                        <div class="col">
+                                            <div class="form-group">
+                                                <div class="col-md-offset-7 col-md-11">
+                                                    <input type="submit" value="نمایش نمودار دایره ای" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="col-md-offset-7 col-md-11">
+                                                    <input type="submit" value=" نمایش نمودار میله ای" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
+                        <br/>
+
                     </div>
-                    <hr />
-                    <div class="form-group">
-                        <div class="col-md-offset-1 col-md-11">
-                            <input type="submit" value="اضافه کردن نظرسنجی" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
-                        </div>
-                    </div>
+
+                    <button class="btn btn-default btnColors" onclick="goToEdit()">
+                        اضافه کردن نظرسنجی
+                    </button>
+
+<!--                    <div class="form-group">-->
+<!--                        <div class="col-md-offset-1 col-md-11">-->
+<!--                            <input type="submit" value="اضافه کردن نظرسنجی" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />-->
+<!--                        </div>-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
@@ -301,6 +310,11 @@
                 x.className = x.className.replace(" w3-show", "");
                 y.style.transform = "rotate(0deg)";
             }
+        }
+
+        //Going to editShop by clicking on showShop button
+        function goToEdit() {
+            window.location.href = "addPoll.html";
         }
 
 
@@ -344,11 +358,6 @@
 
                 }
             }
-
-            //Go to AdminMainPage by clicking on picture
-            $("#admin-img").click(function () {
-                window.location.href = "AdminMainPage.html"
-            });
 
 
             //Getting id of selected subset shop
